; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tcompression.c_tsCompressBigint.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tcompression.c_tsCompressBigint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ONE_STAGE_COMP = common dso_local global i8 0, align 1
@TSDB_DATA_TYPE_BIGINT = common dso_local global i32 0, align 4
@TWO_STAGE_COMP = common dso_local global i8 0, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tsCompressBigint(i8* %0, i32 %1, i32 %2, i8* %3, i32 %4, i8 signext %5, i8* %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8, align 1
  %16 = alloca i8*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store i8* %0, i8** %10, align 8
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i8* %3, i8** %13, align 8
  store i32 %4, i32* %14, align 4
  store i8 %5, i8* %15, align 1
  store i8* %6, i8** %16, align 8
  store i32 %7, i32* %17, align 4
  %19 = load i8, i8* %15, align 1
  %20 = sext i8 %19 to i32
  %21 = load i8, i8* @ONE_STAGE_COMP, align 1
  %22 = sext i8 %21 to i32
  %23 = icmp eq i32 %20, %22
  br i1 %23, label %24, label %30

24:                                               ; preds = %8
  %25 = load i8*, i8** %10, align 8
  %26 = load i32, i32* %12, align 4
  %27 = load i8*, i8** %13, align 8
  %28 = load i32, i32* @TSDB_DATA_TYPE_BIGINT, align 4
  %29 = call i32 @tsCompressINTImp(i8* %25, i32 %26, i8* %27, i32 %28)
  store i32 %29, i32* %9, align 4
  br label %50

30:                                               ; preds = %8
  %31 = load i8, i8* %15, align 1
  %32 = sext i8 %31 to i32
  %33 = load i8, i8* @TWO_STAGE_COMP, align 1
  %34 = sext i8 %33 to i32
  %35 = icmp eq i32 %32, %34
  br i1 %35, label %36, label %47

36:                                               ; preds = %30
  %37 = load i8*, i8** %10, align 8
  %38 = load i32, i32* %12, align 4
  %39 = load i8*, i8** %16, align 8
  %40 = load i32, i32* @TSDB_DATA_TYPE_BIGINT, align 4
  %41 = call i32 @tsCompressINTImp(i8* %37, i32 %38, i8* %39, i32 %40)
  store i32 %41, i32* %18, align 4
  %42 = load i8*, i8** %16, align 8
  %43 = load i32, i32* %18, align 4
  %44 = load i8*, i8** %13, align 8
  %45 = load i32, i32* %14, align 4
  %46 = call i32 @tsCompressStringImp(i8* %42, i32 %43, i8* %44, i32 %45)
  store i32 %46, i32* %9, align 4
  br label %50

47:                                               ; preds = %30
  %48 = call i32 @assert(i32 0)
  br label %49

49:                                               ; preds = %47
  br label %50

50:                                               ; preds = %24, %36, %49
  %51 = load i32, i32* %9, align 4
  ret i32 %51
}

declare dso_local i32 @tsCompressINTImp(i8*, i32, i8*, i32) #1

declare dso_local i32 @tsCompressStringImp(i8*, i32, i8*, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
